--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -6371,7 +6371,7 @@ ww1_USA.74.d:0 "Faced with increasing amounts of car accidents, and a clear link
 ww1_USA.74.a:0 "Surely we Can Agree Driving while Drunk Isn't Safe, Right?"
 ww1_USA.72.t:0 "Honduras Government Overthrown!"
 ww1_USA.72.d:0 "The Honduran government, increasingly facing more and more anti-American protests, has collapsed today as the army declared a temporary junta. Build on the ideas of nationalism and fighting foreign influence, American companies have already either pulled out or faced severe restrictions"
-ww1_USA.7.t:0 "The Americans offer us a trade agreement."
+ww1_USA.7.t:0 "The Americans Offer us a Trade Agreement."
 ww1_USA.7.d:0 "The United States of America has sent our government a letter proposing a joint reduction of tarrifs on eachother. This would make our products cheaper, but some on the right claim this will threaten Canadian independence or hurt local economies."
 ww1_USA.7.a:0 "Ignore their complaints and tell the Americans we will hold it to a vote."
 ww1_USA.8.t:0 "Canadian Government agrees vote on joint tarrif reductions!"
@@ -6457,7 +6457,7 @@ ww1_USA.3.t:0 "Crop dversity efforts boost southern industry"
 ww1_USA.3.d:0 "Our efforts to diversify crop production down south has lead to a massive boost to the economy for the south! Moving away from cotton and towards more profitable crops has turned out to be a great idea."
 
 ww1_USA.3.a:0 "Were the boll weevils a blessing in disguise?"
-ww1_USA.20.t:0 "FDA wins suit against lexington mill company"
+ww1_USA.20.t:0 "FDA Wins Lawsuit Against Lexington Mill Company"
 ww1_USA.20.d:0 "Today, the western district court ruled that the lexington mill companies process for bleached flour breaks FDA regulations. The flour was treated by the "alsop process" by which nitrogen peroxide gas, is mixed with atmospheric air, then mixed into the flour. The lawsuit alleges that the practice makes the flour appear higher grade then it actually is, removes most nutrients, and could make the flour dangerous to consume."
 james_s_sherman:0 "James S Sherman"
 ww1_USA.20.a:0 "The FDA continues to make America a healthier place!"
@@ -6474,7 +6474,7 @@ ww1_USA.22.b:0 "Not our problem."
  ww1_USA.23.d:0 "Terrible tragedy took place in New York. The largest civilian factory fire in history of the United States occurred at Triangle Shirtwaist Factory. Despite the fact that firefighters quickly arrived at the scene of disaster, they were unable to contain fire, it was too large.\n\nFire took place in clothing workshop, where most of the workers were women and children. About 146 people died in fire. Against the backdrop of this tragedy, socialist trade unions have become more active, demanding to reduce the working week and pass laws on safety at work. However, the government is in no hurry to comply with these requirements."
  ww1_USA.23.a:0 "The tragedy shouldn't be repeated a second time."
  ww1_USA.23.b:0 "What a horrible accident!"
- ww1_USA.25.t:0 "Taft's second annual adress to congress"
+ ww1_USA.25.t:0 "Taft's Second Annual Adress to Congress"
  ww1_USA.25.d:0 "It's time for Taft to once again adress congress on his agenda, and the most important issues facing Americans. There were 2 different speeches prepared for him, one about the importance of progressive reforms, and one about the importance of a strong military. We don't have time to give booth speeches, and thus must chose one of them."
  ww1_USA.25.a:0 "Our military must be strengthened."
  ww1_USA.25.b:0 "We must continue progressive reforms."
@@ -6492,7 +6492,8 @@ ww1_USA.28.t:0 "National Progressive Confrence"
 ww1_USA.28.d:0 "The "National Progressive League" has organized a confrence in Washington D.C where they have announced their "dissaproval with Taft." Consisting of 15 Senators and 13 House members, rumor has it they have also elected to support former president Roosevelt in a potential primary bid."
 ww1_USA.28.a:0 "It seems Taft is doomed, then."
 ww1_USA.29.t:0 "Progressives elect to support taft!"
-ww1_USA.29.d:0 "The "National Progressive League" has organized a confrence in Washington D.C where they have announced their decision to "support president Taft's re election". Consisting of 15 Senators and 13 House members, their widespread influence is likely to boost Taft's chance at re election significantly."
+ww1_USA.29.d:0 "The "National Progressive League" has organized a confrence in Washington D.C where they have announced their decision to "support president Taft's re-election." Consisting of 15 Senators and 13 House members, their widespread influence is likely to boost Taft's standing in the primary significantly.\n\nWith this endorsement, Roosevelt has lost one of the most influential organizations in the Republican party. With a defeat this bad, many predict Roosevelts momentum will continue to lose steam, to the point where his political ambitions may be completly dead in the water..."
+ww1_USA.29.a:0 "Take that Roosevelt!"
 ww1_USA.30.t:0 "Super-Fire Errupts Out West!"
 ww1_USA.30.d:0 "Orginally small fires in Oregon Washington Montana and Idaho have met up, and combined into 1. This "Super-Fire" is raving havok across these 4 states destroying local infrastructure and killing 100's! While we could call congress in session to pass an emergancy aid bill out west, forecasts say huge rainpour is expected to hit the fire in just a few days. Should we call congress, or hope the rain takes care of it?"
  ww1_USA.30.a:0 "The rain and our brave firefighthers can manage it."
@@ -6712,7 +6713,7 @@ clark_win.tt:0 "§3Clark§! will face Taft and Roosevelt in November"
 ww1_USA.97.d:0 "William Bryans, a 3 time party nominee and leader of the liberal faction, has offically broken his silence today with a harsh speech attacking Speaker Clark. Calling him "canidate of the corrupt", Bryan has urged party leaders to instead vote for Wilson. With this endorsement from the most popular Democrat in the party, it seems Clarks campaign is truly over."
 ww1_USA.97.a:0 "Looks Like Wilsons Got This One"
 ww1_USA.88.t:0 "Democratic Party Divided on the Issue of Banking Reform"
-ww1_USA.88.d:0 "With the recent passing postal banking by president Taft, the Democratic party has been forced to make its reponse. While more progressive Democrats are saying the reform does not go far enough, calling for a national bank or a federal system to regulate banks, there are some conservatives in the party who support the legislation in its current state. With the main 2 canidates, Wilson and Clark, having different views, both sides will have to do their best to sway the Democratic base."
+ww1_USA.88.d:0 "With the recent creation of the postal banking service by president Taft, the Democratic party has been forced to make its reponse. While more progressive Democrats are saying the reform does not go far enough, calling for a national bank or a federal system to regulate banks, there are some conservatives in the party who support the legislation in its current state. With the main 2 canidates, Wilson and Clark, having different views, both sides will have to do their best to sway the Democratic base."
 ww1_USA.88.a:0 "Wilsons Call for Federal Oversight of Banks Sways the Crowd"
 ww1_USA.88.b:0 "Clarks Moderatism on the Issue Earns him Respect from Voters"
 play_clark.tt:0 "Clark will win the primary"
