--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -670,13 +670,21 @@ USA_workers_compensation:0 "Workers Compensation Law"
  ENG_Arab_Nation_desc:0 "We must work towards the establishment of an independent Arab nation, arising from the ashes of conflict."
  USA_reclamation_and_irrigation_act:0 "Reclamation And Irrigation Act"
  USA_reclamation_and_irrigation_act_idea:0 "Reclamation And Irrigation Act"
-
+USA_us_constitution:0 "United States Constitution"
+USA_progressives_political_power:0 "Progressive Republican Party Faction"
+USA_conservatives_political_power:0 "Conservative Republican Party Faction"
  USA_reclamation_and_irrigation_act_desc:0 "We must assume the burden of costs for irrigation, drainage, and flood control projects. These will end up creating new jobs, reclaim arid lands, and protest tens of thousands from deadly floods."
  ENG_Legacy_Of_Industrial_Revolution:0 "Legacy of the Industrial Revolution"
  ENG_Legacy_Of_Industrial_Revolution_desc:0 "Britain was the cradle of the Industrial Revolution, a legacy we must cherish and continue to uphold."
 USA_expand_the_commission_on_country_life:0 "Expand Comission on Country Life"
 USA_expand_the_commission_on_country_life_desc:0 "Some other loc writer can do this one"
+USA_graceful_step_down_from_politics:0 "Decline a Second Term"
+USA_unity_of_the_republicans:0 "Unity of the Republican Party"
+USA_from_speaker_to_president:0 "From Speaker to President"
+USA_southern_dockyards:0 "Southern Dockyards"
  #continue from here
+USA_eliminate_the_progressive_challengers:0 "Secure Control of the Party"
+USA_get_action:0 "Reinstate the House Dictatorship"
 USA_8_hour_work:0 "8 Hour Workweek"
 USA_8_hour_work_desc:0 "Americans are overworked as it stands today. There is no reason why Americans should have to spend 10 hours+ a day working, when most studies show that a workers productivity falls off massively after the 8th hour. It's time to finally implement a national 8 hour workweek."
  ENG_The_Best:0 "The Best"
@@ -1334,8 +1342,7 @@ USA_lucrative_offers_to_companies_desc:0 "The American government has had a hist
   USA_good_neighbor_policy:0 "Good Neighbor Policy"
   USA_best_pullout_game_west_of_the_atlantic:0 "Best Pullout Game West of the Atlantic"
 USA_equal_partner_ships:0 "Equal Partnerships"
-USA_exploiting_latin_america:0 "Latin American Shenanigans"
-USA_exploiting_latin_america_desc:0 "American companies have great influence over Latin America, bringing tens of millions of dollars to the homeland. §8Nationalist§! and §tSocialist§! agitators in these countries are not happy about this however, and oppose us whenever they can. We will have to be careful when expanding business further, as if stabilty drops below §R25%§! in §YHonduras, Cuba, Or Dominica§!, we will recieve §Rdebuffs§!.\n\n The current stability of §YHonduras§! is [?HON.stability|%Y2]\n\n The current stability of §YCuba§! is [?CUB.stability|%Y2]\n\n The current stability of §YDominica§! is [?DOM.stability|%Y2]."
+ ww1_USA.71.a:0 "Certainly not good for the economy"
 USA_gnb.tt:0 "This sub-branch will leave you with a §Rweaker§! §YCompany Ventures in the America's§! national spirit compared to the §YContinue Business in Latin America§! sub-branch, but it is much simpler, and could save §Gsignificantly§! more political power which could be used for other purposes..."
 USA_legit_bus.tt:0 "These decisions will give both us and the target country §Y1 Civilian Factory§!, they can be taken once every §Y1.5 years§!"
 USA_political_backing_to_honduras:0 "Political Backing to Honduras"
@@ -4343,6 +4350,7 @@ BUL_ui_popularity_header:0 "Influence"
  SER_deal_with_white_hand:0 "Deal With White Hand"
  SER_bribe_radical_deputies:0 "Bribe Radical Deputies"
  SER_balkan_war_army:0 "Balkan War Army"
+
  SER_install_regency:0 "Strengthen the Regency"
  SER_the_southern_struggle:0 "Question of the New Territories"
  SER_the_final_countdown:0 "The Final Countdown"
