--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -49,8 +49,8 @@
  SWE_neutrality_DEF:0 "the Kingdom of Sweden"
  SWE_communism:0 "Worker's Commune of Sweden"
  SWE_communism_DEF:0 "the Worker's Commune of Sweden"
- SWE:0 "Sweden"
- SWE_DEF:0 "Sweden"
+ SWE:0 "Kingdom of Sweden"
+ SWE_DEF:0 "The Kingdom of Sweden"
  SWE_ADJ:0 "Swedish"
  FRA_fascism:0 "French State"
  FRA_fascism_DEF:0 "the French State"
@@ -59,15 +59,15 @@
  FRA_neutrality_DEF:0 "France"
  FRA_communism:0 "Commune of France"
  FRA_communism_DEF:0 "the Federation of the Communes of France"
- FRA:0 "France"
- FRA_DEF:0 "France"
+ FRA:0 "French Republic"
+ FRA_DEF:0 "the French Republic"
  FRA_ADJ:0 "French"
  LUX_fascism_DEF:0 "Nationalist Luxembourg"
  LUX_neutrality_DEF:0 "the Grand Duchy of Luxembourg"
  LUX_communism:0 "Commune of Luxembourg"
  LUX_communism_DEF:0 "the Commune of Luxembourg"
- LUX:0 "Luxembourg"
- LUX_DEF:0 "Luxembourg"
+ LUX:0 "Grand Duchy of Luxembourg"
+ LUX_DEF:0 "the Grand Duchy of Luxembourg"
  LUX_ADJ:0 "Luxembourgish"
  BEL_fascism:0 "Flanders"
  BEL_fascism_DEF:0 "Greater Flanders"
@@ -77,8 +77,8 @@
  BEL_communism_DEF:0 "the Belgian Communal Republic"
  BEL_democratic_DEF:0 "the Kingdom of Belgium"
  BEL_fascism_ADJ:0 "Flemish"
- BEL:0 "Belgium"
- BEL_DEF:0 "Belgium"
+ BEL:0 "Kingdom of Belgium"
+ BEL_DEF:0 "The Kingdom of Belgium"
  BEL_ADJ:0 "Belgian"
  HOL_fascism:0 "Calvinist Netherlands"
  HOL_fascism_DEF:0 "Calvinist Netherlands"
@@ -86,8 +86,8 @@
  HOL_neutrality_DEF:0 "the Kingdom of the Netherlands"
  HOL_communism:0 "Commune of United Provinces"
  HOL_communism_DEF:0 "the Commune of United Provinces"
- HOL:0 "Netherlands"
- HOL_DEF:0 "the Netherlands"
+ HOL:0 "Kingdom of the Netherlands"
+ HOL_DEF:0 "the Kingdom of the Netherlands"
  HOL_ADJ:0 "Dutch"
  CZE_subject:0 "Czechoslovakia"
  CZE_subject_DEF:0 "Czechoslovakia"
@@ -169,8 +169,8 @@
  ROM_neutrality_DEF:0 "the Kingdom of Romania"
  ROM_communism:0 "Romanian Socialist Republic"
  ROM_communism_DEF:0 "the Romanian Socialist Republic"
- ROM:0 "Romania"
- ROM_DEF:0 "Romania"
+ ROM:0 "Kingdom of Romania"
+ ROM_DEF:0 "The Kingdom of Romania"
  ROM_ADJ:0 "Romanian"
  SWI_fascism:0 "Swiss Imperial Confederation"
  SWI_fascism_DEF:0 "the Swiss Imperial Confederation"
@@ -217,8 +217,8 @@
  NOR_neutrality_DEF:0 "the Kingdom of Norway"
  NOR_communism:0 "Socialist State of Norway"
  NOR_communism_DEF:0 "the Socialist State of Norway"
- NOR:0 "Norway"
- NOR_DEF:0 "Norway"
+ NOR:0 "Kingdom of Norway"
+ NOR_DEF:0 "The Kingdom of Norway"
  NOR_ADJ:0 "Norwegian"
  DEN_fascism:0 "North Sea Empire"
  DEN_fascism_DEF:0 "the North Sea Empire"
@@ -226,8 +226,8 @@
  DEN_neutrality_DEF:0 "the Kingdom of Denmark"
  DEN_communism:0 "Danish Council Republic"
  DEN_communism_DEF:0 "the Danish Council Republic"
- DEN:0 "Denmark"
- DEN_DEF:0 "Denmark"
+ DEN:0 "Kingdom of Denmark"
+ DEN_DEF:0 "the Kingdom of Denmark"
  DEN_ADJ:0 "Danish"
  BUL_fascism:0 "Burzhoazna Bulgaria"
  BUL_fascism_DEF:0 "Burzhoazna Bulgaria"
@@ -238,8 +238,8 @@
  BUL:0 "Bulgaria"
  BUL_DEF:0 "Bulgaria"
  BUL_ADJ:0 "Bulgarian"
- POR:0 "Portugal"
- POR_DEF:0 "Portugal"
+ POR:0 "Kingdom of Portugal"
+ POR_DEF:0 "the Kingdom of Portugal"
  POR_ADJ:0 "Portuguese"
  POR_neutrality_DEF:0 "the Kingdom of Portugal"
  POR_democratic_DEF:0 "the Kingdom of Portugal"
@@ -286,8 +286,8 @@
  AFG_democratic_DEF:0 "the Republic of Afghanistan"
  AFG_communism:0 "Socialist Republic of Afghanistan"
  AFG_communism_DEF:0 "the Socialist Republic of Afghanistan"
- AFG:0 "Afghanistan"
- AFG_DEF:0 "Afghanistan"
+ AFG:0 "Emirate of Afghanistan"
+ AFG_DEF:0 "The Emirate of Afghanistan"
  AFG_ADJ:0 "Afghan"
  ARG_democratic_DEF:0 "the Argentine Republic"
  ARG_communism:0 "Socialist Argentine Republic"
@@ -353,13 +353,13 @@
  CHI:0 "China"
  CHI_DEF:0 "China"
  CHI_ADJ:0 "Chinese"
- QIN_democratic:0 "Great Qing"
+ QIN_democratic:0 "Empire of the Great Qing"
  QIN_democratic_DEF:0 "the Empire of the Great Qing"
- QIN_neutrality:0 "Great Qing"
+ QIN_neutrality:0 "Empire of the Great Qing"
  QIN_neutrality_DEF:0 "the Empire of the Great Qing"
- QIN_fascism:0 "Great Qing"
+ QIN_fascism:0 "Empire of the Great Qing"
  QIN_fascism_DEF:0 "the Empire of the Great Qing"
- QIN_communism:0 "Great Qing"
+ QIN_communism:0 "Empire of the Great Qing"
  QIN_communism_DEF:0 "the Empire of the Great Qing"
  QIN:0 "China"
  QIN_DEF:0 "China"
@@ -506,8 +506,8 @@
  PER_neutrality_DEF:0 "the Sublime State of Persia"
  PER_communism:0 "Persian Socialist Republic"
  PER_communism_DEF:0 "the Persian Socialist Republic"
- PER:0 "Persia"
- PER_DEF:0 "Persia"
+ PER:0 "Sublime State of Persia"
+ PER_DEF:0 "the Sublime State of Persia"
  PER_ADJ:0 "Persian"
  PHI_fascism:0 "Philippine Republic"
  PHI_fascism_DEF:0 "the Philippine Republic"
@@ -552,8 +552,8 @@
  SIA_democratic_DEF:0 "the Kingdom of Siam"
  SIA_communism:0 "Thai People's Republic"
  SIA_communism_DEF:0 "the Thai People's Republic"
- SIA:0 "Siam"
- SIA_DEF:0 "Siam"
+ SIA:0 "Kingdom of Siam"
+ SIA_DEF:0 "the Kingdom of Siam"
  SIA_ADJ:0 "Siamese"
  SIK_fascism:0 "Sinkiang Clique"
  SIK_fascism_DEF:0 "the Sinkiang Clique"
@@ -602,8 +602,8 @@
  AST_neutrality_DEF:0 "the Australian Royalists"
  AST_communism:0 "Australian Union"
  AST_communism_DEF:0 "the Australian Union"
- AST:0 "Australia"
- AST_DEF:0 "Australia"
+ AST:0 "Commonwealth Of Australia"
+ AST_DEF:0 "The Commonwealth Of Australia"
  AST_ADJ:0 "Australian"
  NZL_fascism:0 "Kiwi Empire"
  NZL_fascism_DEF:0 "the Kiwi Empire"
@@ -611,8 +611,8 @@
  NZL_neutrality_DEF:0 "the Nova Zeelandia Republic"
  NZL_communism:0 "People's Republic of Aotearoa"
  NZL_communism_DEF:0 "the People's Republic of Aotearoa"
- NZL:0 "New Zealand"
- NZL_DEF:0 "New Zealand"
+ NZL:0 "Dominion Of New Zealand"
+ NZL_DEF:0 "The Dominion Of New Zealand"
  NZL_ADJ:0 "New Zealand"
  URG_fascism:0 "Nationalist Uruguay"
  URG_fascism_DEF:0 "Nationalist Uruguay"
@@ -704,7 +704,7 @@
  LIB_fascism_DEF:0 "the National Union of Liberia"
  LIB_communism:0 "People's Republic of Liberia"
  LIB_communism_DEF:0 "the People's Republic of Liberia"
- LIB_neutrality:0 "Liberia"
+ LIB_neutrality:0 "Republic of Liberia"
  LIB_neutrality_DEF:0 "the Republic of Liberia"
  LIB_neutrality_ADJ:0 "Liberian"
  LIB_democratic:0 "Republic of Liberia"
@@ -832,8 +832,8 @@
  SER_communism_DEF:0 "Socialist Serbia"
  SER_neutrality:0 "Kingdom of Serbia"
  SER_neutrality_DEF:0 "the Kingdom of Serbia"
- SER:0 "Serbia"
- SER_DEF:0 "Serbia"
+ SER:0 "Kingdom of Serbia"
+ SER_DEF:0 "The Kingdom of Serbia"
  SER_ADJ:0 "Serbian"
  ICE_fascism:0 "Iceland"
  ICE_fascism_DEF:0 "Iceland"
@@ -883,8 +883,8 @@
  EGY:0 "Egypt"
  EGY_DEF:0 "Egypt"
  EGY_ADJ:0 "Egyptian"
- LBA_neutrality:0 "Senusiyya"
- LBA_neutrality_DEF:0 "Senusiyya"
+ LBA_neutrality:0 "Senussi Order"
+ LBA_neutrality_DEF:0 "the Senussi Order"
  LBA_fascism:0 "Senussi Order"
  LBA_fascism_DEF:0 "the Senussi Order"
  LBA_communism:0 "Union of Cyrenaica"
