--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1544,6 +1544,9 @@
  CHL_autonomy_puppet_DEF:0 "$OVERLORDADJ$ Chile"
  CHL_autonomy_integrated_puppet:0 "$OVERLORDADJ$ Autonomous Province Of Chile"
  CHL_autonomy_integrated_puppet_DEF:0 "$OVERLORDADJ$ Autonomous Province Of Chile"
+chl_fascist_state:0 "Chilean State"
+chl_fascist_state_DEF:0 "The Chilean State"
+chl_fascist_state_ADJ:0 "Chilean"
  ARG_ENG_autonomy_dominion:0 "Dominion of Wladychfa Gymreig"
  ARG_ENG_autonomy_dominion_DEF:0 "the Dominion of Wladychfa Gymreig"
  ARG_ENG_autonomy_dominion_ADJ:0 "Patagonian Welsh"
