--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -9774,9 +9774,9 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  MSC_treaty_of_seeb: "Treaty of Seeb"
  MSC_invest_in_anglo_persian_company: "Anglo-Persian Oil Company"
  MSC_gun_purchase: "Arms Ourchase"
- MSC_declare_indepedence: "Down With the Colonizers"
+ MSC_declare_independence: "Down With the Colonizers"
  MSC_Imperial_ambitions: "Restore Omani Empire"
- MSC_demand_Somalia: "Demand Somalia"
+ MSC_demand_somalia: "Demand Somalia"
  MSC_buy_zanzibar: "Purchase of Zanzibar"
  MSC_Internal_affairs: "Matters of the Sultanate"
  MSC_Tribal_support: "Secure Tribal Support"
