--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14108,12 +14108,16 @@ ww1_greece.246.a:0 "Our failures continue to burden us."
 
  FRA_socialist_democratic_militarist:0 "Political Balance"
 
-#Liechtenstein
-
-ww1_liechtenstein.1.t:0 "Beck Putsch"
-ww1_liechtenstein.1.d:0 "Wilhelm Beck, Fritz Walser and Martin Ritter today tabled a motion of no confidence in the Landtag against the incumbent governor, Leopold Freiherr von Imhof. This follows growing calls for a Liechtensteiner head of government (Imhof is Austrian) and his poor management of the various embargoes imposed on Liechtenstein.\n\nAlthough we remained neutral during the Great War, our country suffered severe food shortages as a result of our customs union with Austria-Hungary, causing the Entente to become suspicious of our neutrality and embargo us. As the war progressed, the situation became more desperate as food supplies from Austria-Hungary ceased and the Entente put pressure on Switzerland to embargo us as well. Although Imhof set up emergency commissions throughout the country to manage the procurement of food and raw materials and their distribution to the population, he was accused of inadequacy and incompetence in dealing with the economic crisis. This allowed politicians such as Whilhelm Beck to gain prominence and growing support for his social-liberal ideals. Supported by Martin Ritter and Fritz Walser, he called for an expansion of the welfare state, broader voting rights and a Liechtensteiner head of government.\n\nFollowing heated debates in the Landtag, Imhof agreed to submit his resignation, but asked for a vote of confidence. The princely appointed members of the Landtag unanimously supported Imhof, but this didn't stop the elected members from voting to transfer power from the governor to a provisional executive committee led by Martin Ritter. While this coup directly undermines the 1862 Constitution of Liechtenstein, its leader has no intention of breaking with the monarchy, and his proclamation itself ends with the phrase ''May the Prince and the country live long''."
-ww1_liechtenstein.1.a:0 "The coup is too popular to oppose it."
-ww1_liechtenstein.1.b:0 "This is unconstitutional, arrest them."
+ # Liechtenstein
+ ww1_liechtenstein.1.t:0 "Beck Putsch"
+ ww1_liechtenstein.1.d:0 "Wilhelm Beck, Fritz Walser and Martin Ritter today tabled a motion of no confidence in the Landtag against the incumbent governor, Leopold Freiherr von Imhof. This follows growing calls for a Liechtensteiner head of government (Imhof is Austrian) and his poor management of the various embargoes imposed on Liechtenstein.\n\nAlthough we remained neutral during the Great War, our country suffered severe food shortages as a result of our customs union with Austria-Hungary, causing the Entente to become suspicious of our neutrality and embargo us. As the war progressed, the situation became more desperate as food supplies from Austria-Hungary ceased and the Entente put pressure on Switzerland to embargo us as well. Although Imhof set up emergency commissions throughout the country to manage the procurement of food and raw materials and their distribution to the population, he was accused of inadequacy and incompetence in dealing with the economic crisis. This allowed politicians such as Whilhelm Beck to gain prominence and growing support for his social-liberal ideals. Supported by Martin Ritter and Fritz Walser, he called for an expansion of the welfare state, broader voting rights and a Liechtensteiner head of government.\n\nFollowing heated debates in the Landtag, Imhof agreed to submit his resignation, but asked for a vote of confidence. The princely appointed members of the Landtag unanimously supported Imhof, but this didn't stop the elected members from voting to transfer power from the governor to a provisional executive committee led by Martin Ritter. While this coup directly undermines the 1862 Constitution of Liechtenstein, its leader has no intention of breaking with the monarchy, and his proclamation itself ends with the phrase ''May the Prince and the country live long''."
+ ww1_liechtenstein.1.a:0 "The coup is too popular to oppose it."
+ ww1_liechtenstein.1.b:0 "This is unconstitutional, arrest them."
+ ww1_liechtenstein.2.t:0 "A Customs Union with Switzerland?"
+ ww1_liechtenstein.2.d:0 "The breakdown of the economic bridge with Austria has left the country in a state of economic crisis, and it is urgent that we enter into a customs union with our neighbour, Switzerland."
+ ww1_liechtenstein.3.t:0 "A Customs Union with Liechtenstein?"
+ ww1_liechtenstein.3.d:0 "Our quiet little neighbour Liechtenstein has sent us a request to enter into a customs union with us."
+ ww1_liechtenstein.3.a:0 "How bout no?"
 
 #Northwestern Army
 ww1_nwa.1.t: "Formation of Anti-Bolshevik army in the North"
@@ -14327,3 +14331,7 @@ ww1_morocco.26.f:0 "We should leave before we embarrass ourselves further..."
  ww1_armenia.3.b:0 "Did you say "Armenian"?"
  treaty_of_alexandropol:0 "Treaty of Alexandropol has been signed"
  treaty_of_alexandropol_failed:0 "Turkish Nationalists has rejected the Armenian sue for peace"
+
+ # MONACO
+ ww1_monaco.1.t:0 "New Constitution"
+ ww1_monaco.1.d:0 "Monaco was torn apart by the revolution that began in March 1910. Faced with serious problems, with no agricultural land or factories and high unemployment, the people took to the streets in protest, with delegates demanding a constitution and a parliament, and threatening to overthrow the monarchy and establish a republic if they were not granted.\nEventually the Prince gave in to the demands and Monaco became a constitutional monarchy."
