--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2988,6 +2988,8 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  #Monaco
  MCO_monte_carlo_casino:0 "Monte Carlo Casino"
  MCO_monte_carlo_casino_desc:0 "The Casino de Monte-Carlo is owned and operated by the Société des bains de mer de Monaco, a public company in which the Monaco government and the ruling royal family have a majority interest. The company also owns the principal hotels, sports clubs, foodservice establishments, and nightclubs throughout the Principality. However, citizens of Monaco are forbidden from entering the gaming rooms of the casino."
+ MCO_monegasque_revolution:0 "Monégasque Revolution"
+ MCO_monegasque_revolution_desc:0 "In March 1910, protesters angered by the lack of arable land and high unemployment in Monaco organised a delegation to demand that the Prince set up a parliament and enact a constitution. If their demands were not met, they threatened to overthrow the monarchy and establish a republic."
 
  #San Marino
  SMR_roman_republic:0 "Republican Tradition"
