--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10435,6 +10435,34 @@ SAU_Convene_Shura: "Convene The Shura Majlis"
  SAU_welcome_british_agents: "Welcome British Agents"
  SAU_crackdown_on_urbanists: "Crackdown on Cities"
  SAU_crackdown_on_shias: "Crackdown on Shias"
+ SAU_Ikhwan_Politics: "Salafist State"
+ SAU_establish_imamate: "Establish the Imamate"
+ SAU_keep_al_saud: "Keep Al Saud"
+ SAU_empower_the_tribes: "Empower the Tribes"
+ SAU_institute_jihad: "Institute Jihad"
+ SAU_Impose_Sharia: "Impose Salafist Sharia"
+ SAU_repeal_reforms: "Repeal Reforms"
+ SAU_impose_tribute_on_pilgrams: "Impose Pilgram Tribute"
+ SAU_cut_off_british_ties: "Cut Off British Ties"
+ SAU_conquest_of_hejaz: "Conquest of Hejaz"
+ SAU_search_for_oil_companies: "Foreign Oil Companies"
+ SAU_holy_cities: "Holy Cities"
+ SAU_apologize_to_egypt: "Apologize to Egypt"
+ SAU_defend_ikhwan: "Defened the Ikhwan"
+ SAU_renovate_mecca_area: "Renovate Mecca Area"
+ SAU_need_for_reform: "The Need for Reform"
+ SAU_egyptian_advisors: "Invite Egyptian Advisors"
+ SAU_iraqi_advisors: "Invite Iraqi Advisors"
+ SAU_syrian_advisors: "Invite Levantine Advisors"
+ SAU_restrict_their_opinions: "Restrict Advisor Freedom"
+ SAU_allow_them_freedom_of_opinion: "Encourage Constructive Criticism"
+ SAU_sixteen_division_court: "Sixteen Departments Court"
+ SAU_support_accounting_division: "Accounting Division"
+ SAU_establish_telegram_lines: "Lay Telegram Lines"
+ SAU_resettle_tribes: "Resettle Tribes"
+ SAU_modernize_male_education: "Modernize Male Education"
+ SAU_foreign_office: "Foreign Office"
+
 FRA_ww1_rally_the_piou_piou:0 "Rally the Piou-Piou"
 FRA_ww1_rally_the_piou_piou_desc:0 "The right-wing movements are disunited between the royalists and the republicans. Republican MP Jacques Piou has great influence within the right, enough to unify the leadership of the Conservative group. Take control of the party in the interest of a right-wing coalition aimed at opposing the cartel of the left and a unifying objective which will be able to rally us to other parliamentary groups."
 
