--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -434,3 +434,6 @@
  police_officer:0 "Police Officer"
  oil_baron: "Oil Baron"
  MON_spiritual_leader:0 "Jebtsundamba Khutuktu"
+ SAU_engineer: "Engineer"
+ SAU_telegraph_operator: "Telegraph Operator"
+ pan_arabist_doctor: "Pan Arabist Medical Doctor"
