RAJ Loc, and minor focus tree UPDATE

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10369,18 +10369,16 @@ RAJ_northern_offensive_desc:0 ""
 RAJ_the_gates_of_kabul:0 "The Gates of Kabul"
 RAJ_the_gates_of_kabul_desc:0 ""
 
+RAJ_indian_press_act:0 "Indian Press Act"
+RAJ_indian_press_act_desc:0 "Following the Indian Press Act of 1908, radical nationalist newspapers have been mostly curtailed, but nationalist underground organisations continue to form and spread their seditious material. By reviving the provisions of the 1878 Vernacular Press Act, we can draft the main content of a new Indian Press Act aimed at suppressing the remaining nationalist movements."
 RAJ_pursue_the_morley_minto_reforms:0 "Pursue the Morley-Minto Reforms"
-RAJ_pursue_the_morley_minto_reforms_desc:0 ""
+RAJ_pursue_the_morley_minto_reforms_desc:0 "The Morley-Minto Reforms, also known as the Indian Council Acts of 1909, brought much-needed reconciliation with the locals and, although mostly superficial, allowed for greater participation by Indians and Muslims alike at the provincial level. Reaffirming our commitment to the reforms will help to improve our relations with the Indian population, especially since the recent introduction of the Indian Press Act."
 RAJ_george_V_royal_tour:0 "George V Royal Tour"
-RAJ_george_V_royal_tour_desc:0 ""
-RAJ_third_delhi_durbar_aftermath:0 "Third Delhi Durbar Aftermath"
-RAJ_third_delhi_durbar_aftermath_desc:0 ""
+RAJ_george_V_royal_tour_desc:0 "With the recent coronation of George V, [RAJ.GetLeader] has expressed his wish to organise the third Delhi Durbar, the Indian imperial-style mass meeting held in Coronation Park, Delhi, to mark the succession of an Emperor or Empress of India. As well as being a symbol of our hold on the subcontinent, the Durbar is commonly used to announce new policies regarding the Raj. As such, organising it will help us set the course."
 RAJ_builder_of_the_raj:0 "Builder of the Raj"
-RAJ_builder_of_the_raj_desc:0 ""
+RAJ_builder_of_the_raj_desc:0 "Charles Hardinge has great industrial projects planned for the Raj. From schools to railways, the Viceroy and Governor-General of India will guide the construction of the Raj for years to come, and his name will be remembered for a hundred years, if not more."
 RAJ_placate_the_nationalists:0 "Placate the Nationalists"
-RAJ_placate_the_nationalists_desc:0 ""
-RAJ_chelmsford_ascension:0 "Chelmsford Ascension"
-RAJ_chelmsford_ascension_desc:0 ""
+RAJ_placate_the_nationalists_desc:0 "Through his hard work and diplomatic skills, [RAJ.GetLeader] has paved the way for closer cooperation with the Indian National Congress. As a result, radicalism within the Congress has diminished and we can focus on more pressing matters."
 RAJ_august_declaration:0 "August Declaration"
 RAJ_august_declaration_desc:0 ""
 RAJ_montagu_chelmsford_reforms:0 "Montagu-Chelmsford Reforms"
@@ -10401,11 +10399,11 @@ RAJ_rowlatt_act:0 "Rowlatt Act"
 RAJ_rowlatt_act_desc:0 ""
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
-RAJ_status_of_the_capital_desc:0 ""
+RAJ_status_of_the_capital_desc:0 "Calcutta has been the capital of the British Raj since its inception in 1858 following the Sepoy Rebellion, and has served us well ever since. However, Calcutta has its fair share of sanitary issues and calls for a change of capital have grown louder over time. The question being: where should our administration go?"
 RAJ_simla_convention:0 "Simla Convention"
-RAJ_simla_convention_desc:0 ""
+RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
 RAJ_denounce_south_africa:0 "Denounce South-Africa"
-RAJ_denounce_south_africa_desc:0 ""
+RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
 
 RAJ_organise_the_indian_national_congress:0 "Organise the Indian National Congress"
 RAJ_organise_the_indian_national_congress_desc:0 "Expecting the British to improve the situation of the Indian people is hopeless. If we hope to see a prosperous subcontinent one day, we can only rely on the Indian National Congress. However, this political force has recently suffered a series of setbacks, such as the Surat split of 1907, and the elitist nature of its members has prevented its message from spreading to the masses. A few changes in the organisation and leadership of the Congress may well be the push it needs to prosper."
@@ -10434,7 +10432,7 @@ RAJ_home_rule_movement:0 "Home Rule Movement"
 RAJ_home_rule_movement_desc:0 ""
 RAJ_fight_for_the_empire:0 "Fight for the Empire"
 RAJ_fight_for_the_empire_desc:0 ""
-RAJ_towards_dominionship:0 "Towards Dominionship"
+RAJ_towards_dominionship:0 "Indian Constitution Act"
 RAJ_towards_dominionship_desc:0 ""
 
 # Albania
