--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -272,8 +272,8 @@
  WLC_democratic_DEF:0 "Wallachia"
  WLC_communism:0 "Commune of Wallachia"
  WLC_communism_DEF:0 "the Commune of Wallachia"
- USA_NAU_democratic:0 "North American Union"
- USA_NAU_democratic_DEF:0 "the North American Union"
+ USA_NAU_democratic:0 "United States Of North America"
+ USA_NAU_democratic_DEF:0 "the United States Of North America"
  USA_NAU_neutrality:0 "North American State"
  USA_NAU_neutrality_DEF:0 "the North American State"
  USA_NAU_fascism:0 "North American Empire"
