--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -34,14 +34,14 @@
  RUS_communism_DEF:0 "the Russian Democratic Federative Republic"
  USA_fascism:0 "Imperial Wizardom of America"
  USA_fascism_DEF:0 "the Imperial Wizardom of America"
- USA_democratic:0 "United States"
+ USA_democratic:0 "United States of America"
  USA_democratic_DEF:0 "the United States of America"
- USA_neutrality:0 "American Republic"
- USA_neutrality_DEF:0 "the American Republic"
+ USA_neutrality:0 "United States of America"
+ USA_neutrality_DEF:0 "United States of America"
  USA_communism:0 "Socialist States of America"
  USA_communism_DEF:0 "the Socialist States of America"
- USA:0 "America"
- USA_DEF:0 "America"
+ USA:0 "United States of America"
+ USA_DEF:0 "United States of America"
  USA_ADJ:0 "American"
  SWE_fascism:0 "Sweden"
  SWE_fascism_DEF:0 "Sweden"
