--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2744,6 +2744,8 @@ CHL_potable_water:0 "Potable Water"
 CHL_gold_standard:0 "Gold Standard" 
 CHL_CREDIT_restriction_idea:0 "Credit Restriction"
 CHL_luxury_tax_idea:0 "Luxury Tax"
+CHL_booming_literacy:0 "Booming Literacy"
+CHL_a_proper_air_force_idea:0 "Fuerza Aerea De Chile"
 
  compania_de_lota_y_coronel:0 "Compañía De Lota Y Coronel"
 
