--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1079,6 +1079,7 @@ evolutionary_nationalism_desc:0 "Evolutionary Nationalism perceives nationalism 
  CHL_ParNa_party:0 "Partido Nacionalista"
  CHL_ParNa_party_d:0 "Partido Nacionalista-Liberal"
  CHL_ParNa_party_n:0 "Partido Nacionalista-Conservador"
+ CHL_nagob:0 "Gobierno De Chile"
  
 
 
