--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -2036,7 +2036,7 @@ CHL_parliament_incompatibility:0 "Establish Parliament Incompatibility"
 CHL_parliament_incompatibility_desc:0 ""
 CHL_commune_creation:0 "Communes For Chile"
 CHL_commune_creation_desc:0 ""
-CHL_censitary_vote:0 "Censitary Vote"
+CHL_censitary_vote:0 "Censitary "Vote""
 CHL_censitary_vote_desc:0 ""
 CHL_debate_closure:0 "Debate Closure"
 CHL_debate_closure_desc:0 ""
@@ -2126,7 +2126,7 @@ CHL_high_tariffs:0 "High Tariffs"
 CHL_high_tariffs_desc:0 ""
 CHL_luxury_tax:0 "Luxury Tax"
 CHL_luxury_tax_desc:0 ""
-CHL_creation_of_the_agriculture_ministry:0 "Establish The Agriculture Ministry"
+CHL_creation_of_the_agriculture_ministry:0 "Agrarian Reform"
 CHL_creation_of_the_agriculture_ministry_desc:0 ""
 CHL_end_the_inquilinaje_system:0 "End The Inquilinaje System"
 CHL_end_the_inquilinaje_system_desc:0 ""
