--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8851,6 +8851,7 @@ recall_korner:0 "Recall Emil Korner"
 CHL_recall_old_officers_category:0 "Recall Old Officers"
 CHL_recall_old_officers_category_desc:0 "we are at war. and we need the best people to be in charge of our army. we gota honour our army motto,"Always beater,never beaten" "
 recall_holley:0 "Recall Adolfo Holley"
+CHL_the_chilean_state_category:0 "Matters Of The Chilean State"
 #Agadir Crisis
 agadir_crisis_name_wargoal:0 "Agadir Crisis"
 agadir_crisis_french_claim:0 "§Y[FRA.getFlag][FRA.getName]§! wants to impose a protectorate on Morocco"
