--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -240,6 +240,8 @@
  BHR_hamad_ibn_isa:0 "Hamad ibn Isa Al Khalifa"
 
  # BAVARIA
+ BAY_luitpold_von_bayern:0 "Luitpold von Bayern"
+ BAY_ludwig_von_bayern:0 "Ludwig von Bayern"
  BAY_ludwig_iii:0 "Ludwig III"
  BAY_eugen_levine:0 "Eugen Leviné"
  BAY_kurt_eisner:0 "Kurt Eisner"
