--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8115,6 +8115,13 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  prussian.32.a:0 "Sure, after we take all we need."
  prussian.32.b:0 "You must suffer, Krauts."
 
+ ww1_bavaria.1.t:0 "Prinzregent Luitpold von Bayern Dies!"
+ ww1_bavaria.1.d:0 "Prince Luitpold ontracted bronchitis and died in Munich. He was buried in the crypt of the Theatinerkirche in Munich. He was succeeded by his eldest son, Prince Ludwig, Almost immediately, certain elements in the press and other groups in society called for Ludwig to take the throne himself."
+ ww1_bavaria.1.a:0 "Maybe it's time for the twenty six years old regency to end."
+ ww1_bavaria.2.t:0 "Constitutional Amendment of 1913"
+ ww1_bavaria.2.d:0 "The legislature amended the constitution of Bavaria to include a clause specifying that if a regency for reasons of incapacity had lasted for ten years with no prospect of the king ever being able to reign, the regent could proclaim the end of the regency and assume the crown himself, with such action to be ratified by the legislature. The amendment received broad party support in the Lower Chamber where it was carried by a vote of 122 in favour, and 27 against. In the Senate there were only six votes against the amendment. The next day, Ludwig proclaimed the end of the regency, deposed his cousin and proclaimed his own reign as Ludwig III. The legislature duly ratified this action, and Ludwig took his oath."
+ ww1_bavaria.2.a:0 "A definitive step toward a modern constitutional monarchy."
+ 
  # BULGARIA
  ww1_bulgaria.1.t:0 "Invitation to Join the Central Powers"
  ww1_bulgaria.1.d:0 "The German Empire has accepted Bulgaria's demand for formal claims on Macedonia, Thrace, and Dobruja, in exchange for us joining the Central Powers. Popular support for this move is massive. Should we accept?"
