--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -328,6 +328,10 @@ FRENCH_EARLY_DEFEAT_DESC:0 "French and German Ais will act differently, favoring
  RULE_OPTION_TUR_ENVERS_FEVER_DREAM_DESC:0 "Ottoman AI will focus on empowering Enver Paşa as the sole ruler of the empire after going down the Three Pasha Government path and will try to unite all Turkic nations and a single unified Turan state."
  RULE_OPTION_TUR_FORM_A_LEFTIST_PARLIAMENT:0 "Form a Leftist Parliament"
  RULE_OPTION_TUR_FORM_A_LEFTIST_PARLIAMENT_DESC:0 "Ottoman AI will focus on empowering Enver Paşa as the sole ruler of the empire after going down the Three Pasha Government path and will try to unite all Turkic nations and a single unified Turan state."
+ RULE_OPTION_TUR_UNITED_AND_READY:0 "United and Ready"
+ RULE_OPTION_TUR_UNITED_AND_READY_DESC:0 "PLACEHOLDER"
+ RULE_OPTION_TUR_LIBERAL:0 "Liberal"
+ RULE_OPTION_TUR_LIBERAL_DESC:0 "PLACEHOLDER"
 
  #Russia
  RUS_AI_BEHAVIOR:0 "@RUS Russia"
